--- a/bitnami/zookeeper/templates/svc-headless.yaml
+++ b/bitnami/zookeeper/templates/svc-headless.yaml
@@ -11,6 +11,7 @@ metadata:
     helm.sh/chart: {{ template "zookeeper.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
+    app.kubernetes.io/component: {{ template "zookeeper.name" . }}
 spec:
   type: ClusterIP
   clusterIP: None
@@ -29,3 +30,4 @@ spec:
     release: {{ .Release.Name | quote }}
     app.kubernetes.io/name: {{ template "zookeeper.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name | quote }}
+    app.kubernetes.io/component: {{ template "zookeeper.name" . }}
