--- a/bitnami/zookeeper/templates/secrets.yaml
+++ b/bitnami/zookeeper/templates/secrets.yaml
@@ -4,24 +4,12 @@ kind: Secret
 metadata:
   name: "{{ template "zookeeper.fullname" . }}"
   labels:
-    app: {{ template "zookeeper.name" . }}
-    chart: {{ template "zookeeper.chart" . }}
-    release: {{ .Release.Name | quote }}
-    heritage: {{ .Release.Service | quote }}
     app.kubernetes.io/name: {{ template "zookeeper.name" . }}
     helm.sh/chart: {{ template "zookeeper.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name | quote }}
-    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Opaque
 data:
-  {{- if .Values.auth.clientPassword }}
-  client-password: {{ .Values.auth.clientPassword | b64enc | quote }}
-  {{ else }}
-  client-password: {{ randAlphaNum 10 | b64enc | quote }}
-  {{- end }}
-  {{- if .Values.auth.serverPasswords }}
-  server-password: {{ .Values.auth.serverPasswords | b64enc | quote }}
-  {{- else }}
-  server-password: {{ randAlphaNum 10 | b64enc | quote }}
-  {{- end }}
+  client-password: {{ include "zookeeper.clientPassword" . | b64enc | quote }}
+  server-password: {{ include "zookeeper.serverPasswords" . | b64enc | quote }}
 {{- end }}
