--- a/bitnami/kafka/templates/kafka-exporter.yaml
+++ b/bitnami/kafka/templates/kafka-exporter.yaml
@@ -4,10 +4,11 @@ kind: Deployment
 metadata:
   name: {{ template "kafka.fullname" . }}-exporter
   labels:
-    app: {{ template "kafka.name" . }}
-    chart: {{ template "kafka.chart" . }}
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    app.kubernetes.io/name: {{ template "kafka.name" . }}
+    helm.sh/chart: {{ template "kafka.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/component: metrics
 spec:
   replicas: 1
   selector:
