--- a/bitnami/kafka/values.yaml
+++ b/bitnami/kafka/values.yaml
@@ -41,6 +41,14 @@ updateStrategy: RollingUpdate
 ##
 # rollingUpdatePartition:
 
+## Limits the number of pods of the replicated application that are down simultaneously from voluntary disruptions
+## The PDB will only be created if replicaCount is greater than 1
+## ref: https://kubernetes.io/docs/concepts/workloads/pods/disruptions
+##
+podDisruptionBudget:
+  maxUnavailable: 1
+
+
 replicaCount: 1
 
 config: |-
