--- a/bitnami/kafka/templates/statefulset.yaml
+++ b/bitnami/kafka/templates/statefulset.yaml
@@ -272,16 +272,16 @@ spec:
           secretName: {{ required "A secret containinig the Kafka JKS certificates is required when authentication in enabled" .Values.auth.certificatesSecret }}
           defaultMode: 256
       {{ end }}
-{{- if and .Values.persistence.enabled .Values.persistence.existingClaim }}
+{{- if not .Values.persistence.enabled }}
+      - name: data
+        emptyDir: {}
+{{- else if .Values.persistence.existingClaim }}
       - name: data
         persistentVolumeClaim:
 {{- with .Values.persistence.existingClaim }}
           claimName: {{ tpl . $ }}
 {{- end }}
-{{- else if not .Values.persistence.enabled }}
-      - name: data
-        emptyDir: {}
-{{- else if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
+{{- else }}
   volumeClaimTemplates:
     - metadata:
         name: data
