--- a/bitnami/pytorch/templates/service.yaml
+++ b/bitnami/pytorch/templates/service.yaml
@@ -9,9 +9,9 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/component: "master"
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.port }}
       targetPort: pytorch
       name: pytorch
   selector:
