--- a/bitnami/pytorch/values.yaml
+++ b/bitnami/pytorch/values.yaml
@@ -48,67 +48,45 @@ git:
 
 ## PyTorch configuration
 ##
-pytorch:
-  ## The main entrypoint of your app, this will be executed as:
-  ##   python [file] [args]
-  entrypoint: 
-    file:
-    #args:
+## The main entrypoint of your app, this will be executed as:
+##   python [file] [args]
+entrypoint: 
+  file:
+  #args:
 
-  ## To enable distributed mode
-  ##
-  distributed:
-    enabled: false 
-    worldSize: 4
-
-  ## Name of an existing config map containing all the files you want to load in PyTorch
-  ##
-  #configMap:
-
-  ## Enable in order to download files from git repository.
-  ##
-  cloneFilesFromGit:
-    enabled: false
-  #  repository:
-  #  revision: master
-
-  ## Additional environment variables 
-  ##
-  # extraEnvVars:
-  #   - name: NCCL_DEBUG
-  #     value: "INFO"
-  #   - name: NCCL_DEBUG_SUBSYS
-  #     value: "ALL"
-
-## Kubernetes Service Configuration
-service:
-  ## For minikube, set this to NodePort, elsewhere use LoadBalancer
-  ##
-  type: ClusterIP
-  port: 49875
-  ## Specify the nodePort value for the LoadBalancer and NodePort service types.
-  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
-  ##
-  # nodePort:
-  ## Provide any additional annotations which may be required. This can be used to
-  ## set the LoadBalancer service type to internal only.
-  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
-  ##
-  annotations: {}
-  # loadBalancerIP:
-
-## Enable persistence using Persistent Volume Claims
-## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+## Set to `distributed` in order to enable distributed mode
+##   mode: distributed
 ##
-persistence:
+mode: standalone
+
+## Number of nodes that will run the code
+##   WORLD_SIZE will be set to this value
+##
+#worldSize:
+
+## The port used to comunicate with the master
+##   MASTER_PORT will be set to this value
+##
+port: 49875
+
+## Name of an existing config map containing all the files you want to load in PyTorch
+##
+#configMap:
+
+## Enable in order to download files from git repository.
+##
+cloneFilesFromGit:
   enabled: false
-  path: /app
-  ## If defined, volume.beta.kubernetes.io/storage-class: <storageClass>
-  ## Default: volume.alpha.kubernetes.io/storage-class: default
-  ##
-  # storageClass:
-  accessMode: ReadWriteOnce
-  size: 1Gi
+#  repository:
+#  revision: master
+
+## Additional environment variables 
+##
+# extraEnvVars:
+#   - name: NCCL_DEBUG
+#     value: "INFO"
+#   - name: NCCL_DEBUG_SUBSYS
+#     value: "ALL"
 
 ## Node labels for pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
