--- a/bitnami/pytorch/templates/statefulset.yml
+++ b/bitnami/pytorch/templates/statefulset.yml
@@ -1,5 +1,5 @@
 {{- if eq .Values.mode "distributed" }}
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ include "pytorch.fullname" . }}-worker
