--- a/bitnami/node/values.yaml
+++ b/bitnami/node/values.yaml
@@ -32,7 +32,7 @@ image:
 git:
   registry: docker.io
   repository: bitnami/git
-  tag: latest
+  tag: 2.21.0-debian-9-r72
   pullPolicy: IfNotPresent
   ## Optionally specify an array of imagePullSecrets.
   ## Secrets must be manually created in the namespace.
