--- a/bitnami/mxnet/templates/deployment-pvc.yaml
+++ b/bitnami/mxnet/templates/deployment-pvc.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.persistence.enabled }}
+{{- if .Values.persistence.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
