--- a/bitnami/mxnet/templates/scheduler-deployment.yaml
+++ b/bitnami/mxnet/templates/scheduler-deployment.yaml
@@ -56,9 +56,9 @@ spec:
         - name: git-cloned-files
           mountPath: /app
       {{- end }}
-{{- if .Values.initContainers }}
-{{ toYaml .Values.initContainers | indent 6 }}
-{{- end }}
+      {{- if .Values.initContainers }}
+        {{- toYaml .Values.initContainers | nindent 6 }}
+      {{- end }}
       containers:
       - name: mxnet
         workingDir: {{ .Values.entrypoint.workDir }}
@@ -68,7 +68,7 @@ spec:
         - bash
         - -c
         - |
-{{ include "mxnet.entrypoint" . | indent 10 }}
+        {{- include "mxnet.entrypoint" . | nindent 10 }}
         env:
         - name: DMLC_ROLE
           value: "scheduler"
@@ -82,12 +82,12 @@ spec:
               fieldPath: status.podIP
         - name: DMLC_PS_ROOT_PORT
           value: {{ .Values.schedulerPort | quote }}
-{{- if .Values.commonExtraEnvVars }}
-{{ include "mxnet.parseEnvVars" .Values.commonExtraEnvVars | indent 8 }}
-{{- end }}
-{{- if .Values.schedulerExtraEnvVars }}
-{{ include "mxnet.parseEnvVars" .Values.schedulerExtraVars | indent 8 }}
-{{- end }}
+      {{- if .Values.commonExtraEnvVars }}
+        {{- include "mxnet.parseEnvVars" .Values.commonExtraEnvVars | nindent 8 }}
+      {{- end }} 
+      {{- if .Values.schedulerExtraEnvVars }}
+        {{- include "mxnet.parseEnvVars" .Values.schedulerExtraVars | nindent 8 }}
+      {{- end }}
         ports:
         - name: mxnet
           containerPort: {{ .Values.schedulerPort }}
@@ -129,9 +129,9 @@ spec:
         - name: secret-data
           mountPath: /secrets
       {{- end }}
-{{- if .Values.sidecars }}
-{{ toYaml .Values.sidecars | indent 6 }}
-{{- end }}
+    {{- if .Values.sidecars }}
+      {{- toYaml .Values.sidecars | nindent 6 }}
+    {{- end }}
       volumes:
       {{- if .Values.existingSecret }}
       - name: secret-data
